--- a/src/App.css
+++ b/src/App.css
@@ -1539,12 +1539,19 @@ footer {
 
 @media (min-width: 576px) and (-webkit-min-device-pixel-ratio: 2),
   (min-resolution: 192dpi) and (orientation: portrait) {
-  .container,
-  .container-sm {
-    max-width: 96%;
-  }
   .page.project-page.pt-sm-4 {
     padding-top: 1rem !important;
+  }
+  .p-desc {
+    font-size: 1rem;
+    line-height: 1.34;
+  }
+}
+
+@media (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) {
+  #case-studies .col-12 {
+    flex: 0 0 auto;
+    width: 50%;
   }
 }
 
@@ -1555,10 +1562,6 @@ footer {
   }
   #hc-row {
     margin-top: 4em;
-  }
-  #case-studies .col-12 {
-    flex: 0 0 auto;
-    width: 50%;
   }
   .project-page .intro {
     font-size: 1rem;
